--- a/index.html
+++ b/index.html
@@ -280,6 +280,29 @@
       color: var(--cyan);
     }
 
+    .services-icons {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 1.5rem;
+      margin-bottom: 3rem;
+    }
+
+    .service-card {
+      display: grid;
+      gap: 1rem;
+      align-content: start;
+      padding: 1.6rem;
+    }
+
+    .service-card svg {
+      width: 52px;
+      height: 52px;
+    }
+
+    .service-card h4 {
+      font-size: 1.1rem;
+    }
+
     .span-4 {
       grid-column: span 4;
     }
@@ -331,6 +354,17 @@
       background: #ffffff;
       border: 2px solid var(--cyan);
       box-shadow: 0 0 20px rgba(51, 102, 255, 0.25);
+    }
+
+    .method-illustration {
+      display: flex;
+      justify-content: center;
+      margin: 2.5rem 0 3rem;
+    }
+
+    .method-illustration svg {
+      width: min(100%, 460px);
+      height: auto;
     }
 
     .pricing-grid {
@@ -543,6 +577,70 @@
       <p class="section-kicker">Services</p>
       <h2 class="section-title">Des expertises claires, pensées pour votre croissance.</h2>
       <p class="section-subtitle">Trois pôles essentiels pour structurer votre présence digitale, attirer vos clients et renforcer votre crédibilité.</p>
+      <div class="services-icons">
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <circle cx="12" cy="12" r="10"></circle>
+            <path d="M16.2 7.8l-2.4 6.6-6.6 2.4 2.4-6.6z"></path>
+          </svg>
+          <h4>Conseil &amp; Stratégie</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+            <line x1="3" y1="9" x2="21" y2="9"></line>
+            <path d="M9 21V9"></path>
+          </svg>
+          <h4>Sites web &amp; opérations spéciales</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+            <line x1="16" y1="2" x2="16" y2="6"></line>
+            <line x1="8" y1="2" x2="8" y2="6"></line>
+            <line x1="3" y1="10" x2="21" y2="10"></line>
+            <circle cx="12" cy="16" r="2"></circle>
+          </svg>
+          <h4>Événementiel</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M2 12a10 10 0 1 0 20 0 10 10 0 1 0-20 0z"></path>
+            <polygon points="10 8 16 12 10 16 10 8"></polygon>
+          </svg>
+          <h4>Content strategy &amp; factory</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <circle cx="18" cy="5" r="3"></circle>
+            <circle cx="6" cy="12" r="3"></circle>
+            <circle cx="18" cy="19" r="3"></circle>
+            <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+            <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+          </svg>
+          <h4>Réseaux sociaux &amp; e-influence</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
+          </svg>
+          <h4>Performance marketing</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M12 19a9.97 9.97 0 0 1-7.14-3"></path>
+            <path d="M12 2a10 10 0 1 0 10 10"></path>
+            <circle cx="12" cy="12" r="4"></circle>
+          </svg>
+          <h4>Ambassadeurs / employee advocacy</h4>
+        </article>
+        <article class="glass glow-card service-card">
+          <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#3366ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+          </svg>
+          <h4>Social selling / prospection</h4>
+        </article>
+      </div>
       <div class="bento-grid">
         <article class="glass glow-card bento-card span-2">
           <h3>Stratégie &amp; Sites Web</h3>
@@ -578,6 +676,17 @@
       <p class="section-kicker">Méthode 30-60-90</p>
       <h2 class="section-title">Un rythme clair. Une progression implacable.</h2>
       <p class="section-subtitle">Une timeline moderne qui structure l'impact de vos 90 premiers jours avec CLICOM.</p>
+      <div class="method-illustration" aria-hidden="true">
+        <svg width="300" height="100" viewBox="0 0 300 100" fill="none">
+          <line x1="20" y1="50" x2="280" y2="50" stroke="#E5E7EB" stroke-width="2"></line>
+          <circle cx="50" cy="50" r="10" fill="white" stroke="#3366ff" stroke-width="2"></circle>
+          <text x="50" y="80" text-anchor="middle" font-family="Inter" font-size="12" fill="#1a1a2e">30 JOURS</text>
+          <circle cx="150" cy="50" r="10" fill="white" stroke="#3366ff" stroke-width="2"></circle>
+          <text x="150" y="80" text-anchor="middle" font-family="Inter" font-size="12" fill="#1a1a2e">60 JOURS</text>
+          <circle cx="250" cy="50" r="10" fill="#3366ff"></circle>
+          <text x="250" y="80" text-anchor="middle" font-family="Inter" font-size="12" fill="#1a1a2e" font-weight="bold">90 JOURS</text>
+        </svg>
+      </div>
       <div class="method-track">
         <div class="method-step">
           <span>30 JOURS</span>
