feat: add multipage acquisition platform

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
       <a class="logo" href="#top" aria-label="CLICOM, retour en haut">CLICOM.</a>
       <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu">Menu</button>
       <div class="nav-menu" id="nav-menu">
-        <a href="#expertises">Expertises</a>
-        <a href="#methode">Méthode</a>
-        <a href="#tarifs">Tarifs &amp; Mandats</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contact</a>
+        <a href="/expertises/">Expertises</a>
+        <a href="/methode/">Méthode</a>
+        <a href="/tarifs/">Tarifs &amp; Mandats</a>
+        <a href="/blog/">Blog</a>
+        <a href="/contact/">Contact</a>
       </div>
       <div class="nav-actions">
         <button class="theme-toggle" type="button" data-theme-toggle aria-pressed="false" aria-label="Activer le mode sombre">
           <span aria-hidden="true">🌙</span>
           <span class="theme-label">Mode sombre</span>
         </button>
-        <a class="cta" href="#contact" data-focus="contact-name">Parler à un expert</a>
+        <a class="cta" href="/contact/">Parler à un expert</a>
       </div>
     </nav>
   </div>
@@ -56,8 +56,8 @@
         <p class="lead">Stratégie, Création et Technologie pour les PME suisses. Sans intermédiaire.</p>
         <p class="slogan">Chez Clicom, on ne fait pas faire, on sait faire.</p>
         <div class="hero-actions">
-          <a class="cta" href="#contact" data-focus="contact-name">Parler à un expert</a>
-          <a class="ghost" href="#expertises">Découvrir nos expertises</a>
+          <a class="cta" href="/contact/">Parler à un expert</a>
+          <a class="ghost" href="/expertises/">Découvrir nos expertises</a>
         </div>
       </div>
       <div class="hero-media reveal" aria-hidden="true">
@@ -121,7 +121,7 @@
           <div class="switch" role="switch" tabindex="0" aria-checked="false" aria-describedby="pricing-note" aria-label="Basculer entre paiement unique et mensuel"><span>Unique</span><span class="switch-track"><span class="switch-thumb"></span></span><span>Mensuel</span></div>
           <p class="switch-live" aria-live="polite"></p>
         </div>
-        <div class="pricing-cta"><a class="ghost" href="#contact" data-focus="contact-name">Demander une recommandation</a></div>
+        <div class="pricing-cta"><a class="ghost" href="/contact/">Demander une recommandation</a></div>
       </div>
 
       <div class="pricing-table-wrap" aria-describedby="pricing-note">
@@ -150,18 +150,18 @@
             <tr><th scope="row">Maintenance</th><td><span class="check" aria-label="Inclus">✔</span></td><td><span class="check" aria-label="Inclus">✔</span></td><td><span class="check" aria-label="Inclus">✔</span></td></tr>
             <tr class="cta-row">
               <th scope="row">Action</th>
-              <td><a class="ghost" href="#contact" data-offer="pack-lancement">Lancer le pack</a></td>
-              <td><a class="ghost" href="#contact" data-offer="pack-croissance">Activer le pack</a></td>
-              <td><a class="cta" href="#contact" data-offer="partenaire-croissance">Parler d’un mandat</a></td>
+              <td><a class="ghost" href="/contact/?offre=pack-lancement">Lancer le pack</a></td>
+              <td><a class="ghost" href="/contact/?offre=pack-croissance">Activer le pack</a></td>
+              <td><a class="cta" href="/contact/?offre=partenaire-croissance">Parler d’un mandat</a></td>
             </tr>
           </tbody>
         </table>
       </div>
 
       <div class="pricing-cards" aria-label="Offres en cartes">
-        <article class="price-card reveal"><p class="tag">PACK LANCEMENT (Site Web)</p><p class="price price-value" data-price-unique="2’500 CHF" data-price-monthly="350 CHF / mois">2’500 CHF</p><p class="price-note billing-label" data-billing-unique="Unique · Hors TVA" data-billing-monthly="Mensuel · Hors TVA">Unique · Hors TVA</p><p class="roi">Objectif: 2–3 RDV qualifiés/mois</p><ul><li>Site vitrine</li><li>Campagne de lancement</li><li>Maintenance</li></ul><a class="ghost" href="#contact" data-offer="pack-lancement">Lancer le pack</a></article>
-        <article class="price-card reveal"><p class="tag">PACK CROISSANCE (Site + Outils)</p><p class="price price-value" data-price-unique="5’000 CHF" data-price-monthly="620 CHF / mois">5’000 CHF</p><p class="price-note billing-label" data-billing-unique="Unique · Hors TVA" data-billing-monthly="Mensuel · Hors TVA">Unique · Hors TVA</p><p class="roi">Objectif: 3–5 RDV qualifiés/mois</p><ul><li>Site vitrine</li><li>CRM Clicom</li><li>Campagne de lancement</li><li>Création contenus</li></ul><a class="ghost" href="#contact" data-offer="pack-croissance">Activer le pack</a></article>
-        <article class="price-card highlight sticky reveal" aria-label="Mandat de gestion mis en avant"><span class="badge">Recommandé</span><p class="tag">Partenaire Croissance</p><p class="price price-value" data-price-unique="500 à 5’000 CHF / mois" data-price-monthly="500 à 5’000 CHF / mois">500 à 5’000 CHF / mois</p><p class="price-note billing-label" data-billing-unique="Mensuel · Hors TVA" data-billing-monthly="Mensuel · Hors TVA">Mensuel · Hors TVA</p><p class="roi">Objectif: 4–6 RDV qualifiés/mois</p><ul><li>Gestion des pubs</li><li>Animation réseaux</li><li>Création contenus</li><li>Prospection B2B</li></ul><a class="cta" href="#contact" data-offer="partenaire-croissance">Parler d’un mandat</a></article>
+        <article class="price-card reveal"><p class="tag">PACK LANCEMENT (Site Web)</p><p class="price price-value" data-price-unique="2’500 CHF" data-price-monthly="350 CHF / mois">2’500 CHF</p><p class="price-note billing-label" data-billing-unique="Unique · Hors TVA" data-billing-monthly="Mensuel · Hors TVA">Unique · Hors TVA</p><p class="roi">Objectif: 2–3 RDV qualifiés/mois</p><ul><li>Site vitrine</li><li>Campagne de lancement</li><li>Maintenance</li></ul><a class="ghost" href="/contact/?offre=pack-lancement">Lancer le pack</a></article>
+        <article class="price-card reveal"><p class="tag">PACK CROISSANCE (Site + Outils)</p><p class="price price-value" data-price-unique="5’000 CHF" data-price-monthly="620 CHF / mois">5’000 CHF</p><p class="price-note billing-label" data-billing-unique="Unique · Hors TVA" data-billing-monthly="Mensuel · Hors TVA">Unique · Hors TVA</p><p class="roi">Objectif: 3–5 RDV qualifiés/mois</p><ul><li>Site vitrine</li><li>CRM Clicom</li><li>Campagne de lancement</li><li>Création contenus</li></ul><a class="ghost" href="/contact/?offre=pack-croissance">Activer le pack</a></article>
+        <article class="price-card highlight sticky reveal" aria-label="Mandat de gestion mis en avant"><span class="badge">Recommandé</span><p class="tag">Partenaire Croissance</p><p class="price price-value" data-price-unique="500 à 5’000 CHF / mois" data-price-monthly="500 à 5’000 CHF / mois">500 à 5’000 CHF / mois</p><p class="price-note billing-label" data-billing-unique="Mensuel · Hors TVA" data-billing-monthly="Mensuel · Hors TVA">Mensuel · Hors TVA</p><p class="roi">Objectif: 4–6 RDV qualifiés/mois</p><ul><li>Gestion des pubs</li><li>Animation réseaux</li><li>Création contenus</li><li>Prospection B2B</li></ul><a class="cta" href="/contact/?offre=partenaire-croissance">Parler d’un mandat</a></article>
       </div>
 
       <div class="accordions">
@@ -179,9 +179,9 @@
         <p>Études de cas, témoignages et signaux de confiance pour sécuriser vos décisions.</p>
       </div>
       <div class="cases">
-        <article class="case-card reveal"><div class="case-media"><svg viewBox="0 0 240 160" role="img" aria-label="Maquette tableau de bord"><rect x="12" y="12" width="216" height="136" rx="16" fill="#fff" stroke="#dbe3ff"/><rect x="28" y="32" width="120" height="12" rx="6" fill="#e2e8ff"/><rect x="28" y="56" width="160" height="8" rx="4" fill="#eef2ff"/><rect x="28" y="76" width="180" height="48" rx="10" fill="#f6f6f4" stroke="#dde4ff"/></svg></div><div><h3>Hôtel Léman</h3><p>Refonte du site et activation locale.</p><p class="kpi"><strong data-count="42" data-suffix="%">0%</strong> ↑ trafic · <strong data-count="18" data-suffix="%">0%</strong> ↓ CPA · <strong data-count="12" data-suffix="">0</strong> RDV</p><a class="ghost" href="#blog">Lire le cas</a></div></article>
-        <article class="case-card reveal"><div class="case-media"><svg viewBox="0 0 240 160" role="img" aria-label="Maquette d'interface commerciale"><rect x="12" y="12" width="216" height="136" rx="16" fill="#fff" stroke="#dbe3ff"/><rect x="28" y="32" width="80" height="12" rx="6" fill="#e2e8ff"/><rect x="28" y="56" width="184" height="60" rx="12" fill="#f6f6f4" stroke="#dde4ff"/><circle cx="196" cy="46" r="10" fill="#3366ff" opacity="0.15"/></svg></div><div><h3>Clinique Riviera</h3><p>Mandat annuel et visibilité cantonale.</p><p class="kpi"><strong data-count="36" data-suffix="%">0%</strong> ↑ demandes · <strong data-count="22" data-suffix="%">0%</strong> ↓ coûts · <strong data-count="9" data-suffix="">0</strong> RDV</p><a class="ghost" href="#blog">Lire le cas</a></div></article>
-        <article class="case-card reveal"><div class="case-media"><svg viewBox="0 0 240 160" role="img" aria-label="Maquette campagne digitale"><rect x="12" y="12" width="216" height="136" rx="16" fill="#fff" stroke="#dbe3ff"/><rect x="28" y="32" width="96" height="12" rx="6" fill="#e2e8ff"/><rect x="28" y="56" width="140" height="8" rx="4" fill="#eef2ff"/><rect x="28" y="76" width="120" height="8" rx="4" fill="#eef2ff"/><rect x="28" y="104" width="184" height="28" rx="10" fill="#f6f6f4" stroke="#dde4ff"/></svg></div><div><h3>Groupe Alpina</h3><p>Programme ambassadeurs et prospection B2B.</p><p class="kpi"><strong data-count="28" data-suffix="%">0%</strong> ↑ leads · <strong data-count="17" data-suffix="%">0%</strong> ↓ délais · <strong data-count="15" data-suffix="">0</strong> RDV</p><a class="ghost" href="#blog">Lire le cas</a></div></article>
+        <article class="case-card reveal"><div class="case-media"><svg viewBox="0 0 240 160" role="img" aria-label="Maquette tableau de bord"><rect x="12" y="12" width="216" height="136" rx="16" fill="#fff" stroke="#dbe3ff"/><rect x="28" y="32" width="120" height="12" rx="6" fill="#e2e8ff"/><rect x="28" y="56" width="160" height="8" rx="4" fill="#eef2ff"/><rect x="28" y="76" width="180" height="48" rx="10" fill="#f6f6f4" stroke="#dde4ff"/></svg></div><div><h3>Hôtel Léman</h3><p>Refonte du site et activation locale.</p><p class="kpi"><strong data-count="42" data-suffix="%">0%</strong> ↑ trafic · <strong data-count="18" data-suffix="%">0%</strong> ↓ CPA · <strong data-count="12" data-suffix="">0</strong> RDV</p><a class="ghost" href="/etudes-de-cas/hotel-leman/">Lire le cas</a></div></article>
+        <article class="case-card reveal"><div class="case-media"><svg viewBox="0 0 240 160" role="img" aria-label="Maquette d'interface commerciale"><rect x="12" y="12" width="216" height="136" rx="16" fill="#fff" stroke="#dbe3ff"/><rect x="28" y="32" width="80" height="12" rx="6" fill="#e2e8ff"/><rect x="28" y="56" width="184" height="60" rx="12" fill="#f6f6f4" stroke="#dde4ff"/><circle cx="196" cy="46" r="10" fill="#3366ff" opacity="0.15"/></svg></div><div><h3>Clinique Riviera</h3><p>Mandat annuel et visibilité cantonale.</p><p class="kpi"><strong data-count="36" data-suffix="%">0%</strong> ↑ demandes · <strong data-count="22" data-suffix="%">0%</strong> ↓ coûts · <strong data-count="9" data-suffix="">0</strong> RDV</p><a class="ghost" href="/etudes-de-cas/clinique-riviera/">Lire le cas</a></div></article>
+        <article class="case-card reveal"><div class="case-media"><svg viewBox="0 0 240 160" role="img" aria-label="Maquette campagne digitale"><rect x="12" y="12" width="216" height="136" rx="16" fill="#fff" stroke="#dbe3ff"/><rect x="28" y="32" width="96" height="12" rx="6" fill="#e2e8ff"/><rect x="28" y="56" width="140" height="8" rx="4" fill="#eef2ff"/><rect x="28" y="76" width="120" height="8" rx="4" fill="#eef2ff"/><rect x="28" y="104" width="184" height="28" rx="10" fill="#f6f6f4" stroke="#dde4ff"/></svg></div><div><h3>Groupe Alpina</h3><p>Programme ambassadeurs et prospection B2B.</p><p class="kpi"><strong data-count="28" data-suffix="%">0%</strong> ↑ leads · <strong data-count="17" data-suffix="%">0%</strong> ↓ délais · <strong data-count="15" data-suffix="">0</strong> RDV</p><a class="ghost" href="/etudes-de-cas/groupe-alpina/">Lire le cas</a></div></article>
       </div>
 
       <div class="testimonials">
@@ -224,9 +224,9 @@
         <p>Des analyses concrètes pour décider avec confiance.</p>
       </div>
       <div class="blog-grid">
-        <article class="blog-card reveal"><p class="meta">Stratégie · 6 min</p><h3>Pourquoi un site web ne suffit plus en 2025 ?</h3><p>Le point de départ pour repenser votre dispositif complet.</p><a class="ghost" href="#contact" data-focus="contact-name">Recevoir un conseil</a></article>
-        <article class="blog-card reveal"><p class="meta">Outils · 5 min</p><h3>Comment digitaliser sa force de vente ?</h3><p>Structurer votre prospection pour gagner en efficacité.</p><a class="ghost" href="#contact" data-focus="contact-name">Parler à un expert</a></article>
-        <article class="blog-card reveal"><p class="meta">SEO Local · 4 min</p><h3>SEO Local : Dominez votre canton.</h3><p>Les leviers concrets pour gagner en visibilité locale.</p><a class="ghost" href="#contact" data-focus="contact-name">Demander un audit</a></article>
+        <article class="blog-card reveal"><p class="meta">Stratégie · 6 min</p><h3>Pourquoi un site web ne suffit plus en 2025 ?</h3><p>Le point de départ pour repenser votre dispositif complet.</p><a class="ghost" href="/blog/pourquoi-un-site-web-ne-suffit-plus/">Lire l'article</a></article>
+        <article class="blog-card reveal"><p class="meta">Outils · 5 min</p><h3>Comment digitaliser sa force de vente ?</h3><p>Structurer votre prospection pour gagner en efficacité.</p><a class="ghost" href="/blog/digitaliser-force-de-vente/">Lire l'article</a></article>
+        <article class="blog-card reveal"><p class="meta">SEO Local · 4 min</p><h3>SEO Local : Dominez votre canton.</h3><p>Les leviers concrets pour gagner en visibilité locale.</p><a class="ghost" href="/blog/seo-local-dominez-votre-canton/">Lire l'article</a></article>
       </div>
     </div>
   </section>
@@ -282,15 +282,15 @@
     </div>
     <div>
       <h4>Services</h4>
-      <ul><li>Conseil &amp; Stratégie</li><li>Sites Web</li><li>Publicité</li><li>Contenus</li></ul>
+      <ul><li><a href="/expertises/">Conseil &amp; Stratégie</a></li><li><a href="/expertises/">Sites Web</a></li><li><a href="/expertises/">Publicité</a></li><li><a href="/expertises/">Contenus</a></li></ul>
     </div>
     <div>
       <h4>Agence</h4>
-      <ul><li>Méthode 30-60-90</li><li>Tarifs &amp; Mandats</li><li>Blog</li><li>Contact</li></ul>
+      <ul><li><a href="/methode/">Méthode 30-60-90</a></li><li><a href="/tarifs/">Tarifs &amp; Mandats</a></li><li><a href="/blog/">Blog</a></li><li><a href="/contact/">Contact</a></li></ul>
     </div>
     <div>
       <h4>Légal</h4>
-      <ul><li>LPD</li><li>Mentions</li></ul>
+      <ul><li><a href="/legal/lpd/">LPD</a></li><li><a href="/legal/mentions/">Mentions</a></li></ul>
     </div>
   </div>
 </footer>
